# qhub-jupyterhub-theme

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  RELEASE.md  environment.yaml  login.html  pyproject.toml  setup.py  shell.nix  test.sh  test_jupyterhub_config.py
.github/workflows/: release.yaml
assets/css/: main.css
extra-assets/css/: pangeo-style.css
nebari_jupyterhub_theme/: __init__.py
nebari_jupyterhub_theme/templates/: login.html  page.html  style.css
qhub_jupyterhub_theme/: __init__.py
qhub_jupyterhub_theme/custom/css/: style.css
qhub_jupyterhub_theme/templates/: chatbot_block.html  chatbot_styles.html  login.html  page.html  style.css
templates/: login.html  page.html
