[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qhub-jupyterhub-theme"
dynamic = ["version"]
description = "Nebari JupyterHub theme"
readme = "README.md"
license = "BSD-3"
requires-python = ">=3.8"
maintainers = [{ name = "Nebari development team" }]
keywords = ["jupyterhub", "theme"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Topic :: Software Development :: Build Tools",
    "Operating System :: OS Independent",
]
dependencies = ["jupyterhub"]

[project.urls]
"Bug Reports" = "https://github.com/nebari-dev/nebari-jupyterhub-theme/issues"
Homepage = "https://nebari.dev"
"Source code" = "https://github.com/nebari-dev/nebari-jupyterhub-theme"

[tool.hatch.version]
path = "qhub_jupyterhub_theme/__init__.py"

[tool.hatch.build.targets.sdist]
include = ["/qhub_jupyterhub_theme"]
